--- a/api-gateway-service.yml
+++ b/api-gateway-service.yml
@@ -6,12 +6,12 @@ zuul:
       path: /movies/**
       url: http://localhost:5000/v1/movies/
     rating-service:
-      path: /rating/**
+      path: /ratings/**
       url: http://localhost:4000/v1/ratings/
     rental-service:
-      path: /rental/**
+      path: /rentals/**
       url: http://localhost:6000/v1/rentals/
     recommendation-service:
-      path: /recommendation/**
+      path: /recommendations/**
       url: http://localhost:4500/v1/recommendations/
       
