--- a/recommendation-service.yml
+++ b/recommendation-service.yml
@@ -1,7 +1,7 @@
 server:
   port: 4500
 spring:
-  profiles: test
+  profiles: dev
   data:
     mongodb:
       host: 192.168.99.101
@@ -10,3 +10,9 @@ spring:
     host: 192.168.99.101
     username: guest
     password: guest
+spring:
+  profiles: test
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
