--- a/user-service.yml
+++ b/user-service.yml
@@ -1,5 +1,3 @@
-server:
-  port: 7000
 spring:
   profiles: test
   datasource:
@@ -8,3 +6,46 @@ spring:
    console:
     enabled: true
     path: /console/
+server:
+  port: 8000
+---
+spring:
+  profiles: dev
+  datasource:
+    url: jdbc:postgresql://192.168.99.100:5432/test
+    username: postgres
+    password: postgres
+  jpa:
+    database: postgresql
+    hibernate:
+        ddl-auto: update
+---
+spring:
+  profiles: docker
+  datasource:
+    url: jdbc:postgresql://postgres:5432/test
+    username: postgres
+    password: postgres
+  jpa:
+    database: postgresql
+    hibernate:
+        ddl-auto: update
+---
+spring:
+  profiles: swarm
+  datasource:
+    url: jdbc:postgresql://${DB}:5432/test
+    username: postgres
+    password: postgres
+  jpa:
+    database: postgresql
+    hibernate:
+        ddl-auto: update
+
+  sleuth:
+    sampler:
+      percentage: 0.5
+
+  zipkin:
+    base-url: http://${ZIPKIN}:9411/
+    enabled: true
